<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>VerticalTabsSettings</class>
 <widget class="QDialog" name="VerticalTabsSettings">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>415</width>
    <height>231</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Vertical Tabs Settings</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>View</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Please select view type:</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="tabListView">
        <property name="text">
         <string>Tab List</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="tabTreeView">
        <property name="text">
         <string>Tab Tree</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="replaceTabBar">
     <property name="text">
      <string>Use as replacement for main TabBar.</string>
     </property>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
